# serializer version: 1
# name: test_number_entities[number.test_player_1_bass-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 10.0,
      'min': -10.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.test_player_1_bass',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Bass',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Bass',
    'platform': 'music_assistant',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'bass',
    'unique_id': '00:00:00:00:00:01_bass',
    'unit_of_measurement': None,
  })
# ---
# name: test_number_entities[number.test_player_1_bass-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Player 1 Bass',
      'max': 10.0,
      'min': -10.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'number.test_player_1_bass',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-6.0',
  })
# ---
# name: test_number_entities[number.test_player_1_treble-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 10,
      'min': -10,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.test_player_1_treble',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Treble',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Treble',
    'platform': 'music_assistant',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'treble',
    'unique_id': '00:00:00:00:00:01_treble',
    'unit_of_measurement': None,
  })
# ---
# name: test_number_entities[number.test_player_1_treble-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Player 1 Treble',
      'max': 10,
      'min': -10,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.test_player_1_treble',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-6',
  })
# ---
